add app store button and initial seo

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -273,11 +273,15 @@ a:focus,
   font-weight: 300;
   line-height: 30px;
   margin: 0 auto;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
+}
+
+.intro .app-store-badge {
+  width: 200px;
 }
 
 header .intro-text {
-  padding-top: 350px;
+  padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
 }
